<resources>
    <string name="app_name">Movie Search App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_map">Map</string>
    <string name="menu_item_list">List</string>
    <string name="search_for_movies">Search for movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="movie_picture_image">Movie picture image</string>
    <string name="menu_item_search">Search</string>
    <string name="director">Director:</string>
    <string name="genres">Genres:</string>
    <string name="request_permission_dialog_title">Access to geolocation is closed</string>
    <string name="request_permission_dialog_message">Allow geolocation access if you want to know cinemas nearby</string>
    <string name="request_permission_dialog_positive_button_text">Sure! Why not!?</string>
    <string name="request_permission_dialog_negative_button_text">No, thanks</string>
</resources>